--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "private": true,
   "scripts": {
     "postinstall": "husky install",
-    "test": "jest",
+    "test": "jest --coverage",
     "test:reporter": "yarn jest --ci",
     "test:generate": "ts-node autoGenerateTests.ts",
     "lint": "eslint .",
@@ -48,8 +48,10 @@
     "zod": "^3.22.3"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-decorators": "^7.25.9",
     "@babel/preset-env": "7.13.10",
-    "@babel/preset-typescript": "7.13.0",
+    "@babel/preset-typescript": "^7.26.0",
     "@tsconfig/node-lts-strictest-esm": "^18.12.1",
     "@types/async-retry": "1.4.2",
     "@types/cors": "^2.8.10",
